# icsqr

./: Cargo.toml  README.md  build.rs
src/: ics.rs  main.rs  qr.rs
ui/: app.slint
