[package]
name = "icsqr"
version = "0.1.0"
edition = "2024"
build = "build.rs"
license = "CC0-1.0"

[dependencies]
arboard = "3.6.1"
image = "0.25.10"
qrcode = "0.14.1"
rfd = "0.17.2"
slint = { version = "1.16.1", features = ["backend-winit", "unstable-winit-030", "raw-window-handle-06"] }
ical = { version = "0.11.0", features = ["generator"] }

[build-dependencies]
slint-build = "1.16.1"
